--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/libreriaJasper"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/maial/OneDrive/Documentos/DesarrolloDeInterfaces/cONECTOR/mysql-connector-java-5.1.22-bin.jar">
+	<classpathentry kind="lib" path="C:/Users/mixha/Mi unidad/DAM3/Desarrollo de Interfaces/conectorBbdd/mysql-connector-java-5.1.22-bin.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
