--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//informes/FichajeEmpleados.jrxml=UTF-8
+encoding//informes/InformeEmpleados.jrxml=UTF-8
 encoding/<project>=UTF-8
